@@ -2,7 +2,7 @@
 %%%-------------------------------------------------------------------
 %%% File    : stream.erl
 %%% Author  : Christopher Faulet <christopher.faulet@capflam.org>
-%%% Description : 
+%%% Description :
 %%%
 %%% Created : 27 Oct 2005 by Christopher Faulet <christopher.faulet@capflam.org>
 %%%-------------------------------------------------------------------
@@ -26,7 +26,7 @@
 %%
 %% @author Christopher Faulet <christopher.faulet@capflam.org>
 %%   [http://www.capflam.org]
-%% @version 1.0
+%% @version 1.1
 %% @end
 %% =====================================================================
 
@@ -37,18 +37,16 @@
 -module(stream).
 
 -author('christopher.faulet@capflam.org').
-
+-vsn('1.1').
 
 %% API
--export([len/1,equal/2,concat/2,chr/2,rchr/2,str/2,rstr/2,index/2,
-         span/2,cspan/2,substr/2,substr/3,tokens/2,chars/2,chars/3]).
+-export([len/1,equal/2,concat/2,chr/2,rchr/2,str/2,rstr/2,span/2,cspan/2,
+         substr/2,substr/3,tokens/2,chars/2,chars/3,copies/2,words/1,words/2,
+         strip/1,strip/2,strip/3,index/2,sub_word/2,sub_word/3,left/2,left/3,
+         right/2,right/3,sub_stream/2,sub_stream/3,centre/2,centre/3,
+         reverse/1,member/2,to_lower/1,to_upper/1]).
 
--export([copies/2,words/1,words/2,strip/1,strip/2,strip/3,index/2,
-         sub_word/2,sub_word/3,left/2,left/3,right/2,right/3,
-         sub_stream/2,sub_stream/3,centre/2,centre/3]).
-
--export([reverse/1, member/2]).
-
+-type direction() :: 'left' | 'right' | 'both'.
 
 %%====================================================================
 %% API
@@ -67,12 +65,14 @@
 %%   </DIV>
 %% </DIV>
 %%
-len(Stream) -> size(Stream).
+-spec len(binary()) -> non_neg_integer().
+
+len(Stream) when is_binary(Stream) -> size(Stream).
 
 
 %% @spec equal(Stream::Stream1, Stream::Stream2) -> bool()
 %%
-%% @doc Tests whether two streams are equal. 
+%% @doc Tests whether two streams are equal.
 %% Returns <CODE>true</CODE> if they are, otherwise <CODE>false</CODE>.
 %%
 %% <DIV CLASS="REFBODY"><P>Types:</P>
@@ -83,13 +83,15 @@ len(Stream) -> size(Stream).
 %%   </DIV>
 %% </DIV>
 %%
-equal(Stream, Stream) -> true;
+-spec equal(binary(), binary()) -> bool().
+
+equal(Stream, Stream) when is_binary(Stream) -> true;
 equal(_, _) -> false.
 
 
 %% @spec concat(Stream1, Stream2) -> Stream3
 %%
-%% @doc Concatenates two streams to form a new stream. 
+%% @doc Concatenates two streams to form a new stream.
 %% Returns the new stream.
 %%
 %% <DIV CLASS="REFBODY"><P>Types:</P>
@@ -100,14 +102,16 @@ equal(_, _) -> false.
 %%   </DIV>
 %% </DIV>
 %%
+-spec concat(binary(), binary()) -> binary().
+
 concat(Stream1, Stream2) ->
     <<Stream1/binary, Stream2/binary>>.
 
 
 %% @spec chr(Stream, Character) -> Index
 %%
-%% @doc Returns the index of the first occurrence of <CODE>Character</CODE> in <CODE>Stream</CODE>. 
-%% 0 is returned if <CODE>Character</CODE> does not occur.
+%% @doc Returns the index of the first occurrence of <CODE>Character</CODE> in
+%% <CODE>Stream</CODE>.  0 is returned if <CODE>Character</CODE> does not occur.
 %%
 %% <DIV CLASS="REFBODY"><P>Types:</P>
 %%   <DIV CLASS="REFTYPES">
@@ -119,8 +123,9 @@ concat(Stream1, Stream2) ->
 %%   </DIV>
 %% </DIV>
 %%
-chr(Stream, Character) when binary(Stream) ->
-    chr(Stream, Character, 1).
+-spec chr(binary(), char()) -> non_neg_integer().
+
+chr(Stream, Character) when is_integer(Character) -> chr(Stream, Character, 1).
 
 chr(<<C:8, _/binary>>, C, Offset) -> Offset;
 chr(<<_:8, Rest/binary>>, C, Offset) -> chr(Rest, C, Offset+1);
@@ -129,8 +134,8 @@ chr(<<>>, _C, _I) -> 0.
 
 %% @spec rchr(Stream, Character) -> Index
 %%
-%% @doc Returns the index of the last occurrence of <CODE>Character</CODE> in <CODE>Stream</CODE>. 
-%% 0 is returned if <CODE>Character</CODE> does not occur.
+%% @doc Returns the index of the last occurrence of <CODE>Character</CODE> in
+%% <CODE>Stream</CODE>.  0 is returned if <CODE>Character</CODE> does not occur.
 %%
 %% <DIV CLASS="REFBODY"><P>Types:</P>
 %%   <DIV CLASS="REFTYPES">
@@ -142,7 +147,9 @@ chr(<<>>, _C, _I) -> 0.
 %%   </DIV>
 %% </DIV>
 %%
-rchr(Stream, Character) -> 
+-spec rchr(binary(), char()) -> non_neg_integer().
+
+rchr(Stream, Character) when is_integer(Character) ->
     rchr(Stream, Character, 1, 0).
 
 rchr(<<C:8, Rest/binary>>, C, Offset, _L) -> rchr(Rest, C, Offset+1, Offset);
@@ -152,8 +159,9 @@ rchr(<<>>, _C, _Offset, L) -> L.
 
 %% @spec str(Stream, SubStream) -> Index
 %%
-%% @doc Returns the position where the first occurrence of <CODE>SubStream</CODE> begins in <CODE>Stream</CODE>. 
-%% 0 is returned if <CODE>Substream</CODE> does not exist in <CODE>Stream</CODE>. 
+%% @doc Returns the position where the first occurrence of
+%% <CODE>SubStream</CODE> begins in <CODE>Stream</CODE>.  0 is returned if
+%% <CODE>Substream</CODE> does not exist in <CODE>Stream</CODE>.
 %%
 %% <DIV CLASS="REFBODY"><P>Types:</P>
 %%   <DIV CLASS="REFTYPES">
@@ -174,22 +182,26 @@ rchr(<<>>, _C, _Offset, L) -> L.
 %% </P>
 %% </DIV>
 %%
-str(Stream, SubStream) ->
-    str(Stream, SubStream, 1).
+-spec str(binary(), binary()) -> non_neg_integer().
+
+str(Stream, SubStream) when is_binary(SubStream) -> str(Stream, SubStream, 1).
 
 str(<<C:8, Rest1/binary>>, <<C:8, Rest2/binary>>, Offset) ->
     case prefix(Rest2, Rest1) of
-	true -> Offset;
-	false -> str(Rest1, <<C:8, Rest2/binary>>, Offset+1)
+        true -> Offset;
+        false -> str(Rest1, <<C:8, Rest2/binary>>, Offset+1)
     end;
-str(<<_:8, Rest1/binary>>, Sub, Offset) -> str(Rest1, Sub, Offset+1);
-str(<<>>, _Sub, _Offset) -> 0.
+str(<<_:8, Rest1/binary>>, Sub, Offset) ->
+    str(Rest1, Sub, Offset+1);
+str(<<>>, _Sub, _Offset) ->
+    0.
 
 
 %% @spec rstr(Stream, SubStream) -> Index
 %%
-%% @doc Returns the position where the last occurrence of <CODE>SubStream</CODE> begins in <CODE>Stream</CODE>. 
-%% 0 is returned if <CODE>SubStream</CODE> does not exist in <CODE>Stream</CODE>. 
+%% @doc Returns the position where the last occurrence of <CODE>SubStream</CODE>
+%% begins in <CODE>Stream</CODE>.  0 is returned if <CODE>SubStream</CODE> does
+%% not exist in <CODE>Stream</CODE>.
 %%
 %% <DIV CLASS="REFBODY"><P>Types:</P>
 %%   <DIV CLASS="REFTYPES">
@@ -210,38 +222,43 @@ str(<<>>, _Sub, _Offset) -> 0.
 %% </P>
 %% </DIV>
 %%
-rstr(Stream, SubStream) ->
+-spec rstr(binary(), binary()) -> non_neg_integer().
+
+rstr(Stream, SubStream) when is_binary(SubStream) ->
     rstr(Stream, SubStream, 1, 0).
 
 rstr(<<C:8, Rest1/binary>>, <<C:8, Rest2/binary>>, Offset, L) ->
     case prefix(Rest2, Rest1) of
-	true -> rstr(Rest1, <<C:8, Rest2/binary>>, Offset+1, Offset);
-	false -> rstr(Rest1, <<C:8, Rest2/binary>>, Offset+1, L)
+        true -> rstr(Rest1, <<C:8, Rest2/binary>>, Offset+1, Offset);
+        false -> rstr(Rest1, <<C:8, Rest2/binary>>, Offset+1, L)
     end;
 rstr(<<_:8, Rest1/binary>>, Sub, Offset, L) ->
     rstr(Rest1, Sub, Offset+1, L);
-rstr(<<>>, _Sub, _Offset, L) -> L.
+rstr(<<>>, _Sub, _Offset, L) ->
+    L.
 
 
 prefix(Pre, String) ->
-    Len=len(Pre),  
+    Len=len(Pre),
     case String of
-	<<Pre:Len/binary, _/binary>> ->
-	    true;
-	_ ->
-	    false
+        <<Pre:Len/binary, _/binary>> -> true;
+        _ -> false
     end.
 
 
 %% @spec index(Stream, SubStream) -> Index
 %% @deprecated See {@link str/2} for details.
 %% @equiv str(Stream, SubStream)
+-spec index(binary(), binary()) -> non_neg_integer().
+
 index(Stream, SubStream) -> str(Stream, SubStream).
 
 
 %% @spec span(Stream, Chars) -> Length
 %%
-%% @doc Returns the length of the maximum initial segment of <CODE>Stream</CODE>, which consists entirely of bytes from <CODE>Chars</CODE>.
+%% @doc Returns the length of the maximum initial segment of
+%% <CODE>Stream</CODE>, which consists entirely of bytes from
+%% <CODE>Chars</CODE>.
 %%
 %% <DIV CLASS="REFBODY"><P>Types:</P>
 %%   <DIV CLASS="REFTYPES">
@@ -261,20 +278,25 @@ index(Stream, SubStream) -> str(Stream, SubStream).
 %% </PRE>
 %% </P>
 %% </DIV>
-span(Stream, Chars) -> span(Stream, Chars, 0).
+-spec span(binary(), binary()) -> non_neg_integer().
+
+span(Stream, Chars) when is_binary(Chars) -> span(Stream, Chars, 0).
 
 span(<<C:8, Rest/binary>>, Cs, Len) ->
     case member(C, Cs) of
         true -> span(Rest, Cs, Len+1);
         false -> Len
     end;
-span(<<>>, _Cs, Len) -> Len.
+span(<<>>, _Cs, Len) ->
+    Len.
 
 
 
 %% @spec cspan(Stream, Chars) -> Length
 %%
-%% @doc Returns the length of the maximum initial segment of <CODE>Stream</CODE>, which consists entirely of bytes not from <CODE>Chars</CODE>.
+%% @doc Returns the length of the maximum initial segment of
+%% <CODE>Stream</CODE>, which consists entirely of bytes not from
+%% <CODE>Chars</CODE>.
 %%
 %% <DIV CLASS="REFBODY"><P>Types:</P>
 %%   <DIV CLASS="REFTYPES">
@@ -294,21 +316,26 @@ span(<<>>, _Cs, Len) -> Len.
 %% </PRE>
 %% </P>
 %% </DIV>
-cspan(Stream, Chars) -> cspan(Stream, Chars, 0).
+-spec cspan(binary(), binary()) -> non_neg_integer().
+
+cspan(Stream, Chars) when is_binary(Chars) -> cspan(Stream, Chars, 0).
 
 cspan(<<C:8, Rest/binary>>, Cs, Len) ->
     case member(C, Cs) of
         true -> Len;
         false -> cspan(Rest, Cs, Len+1)
     end;
-cspan(<<>>, _Cs, Len) -> Len.
-    
+cspan(<<>>, _Cs, Len) ->
+    Len.
+
 
 %% @spec substr(Stream, Start) -> SubStream
 %% @doc See {@link substr/3} for details.
-substr(Stream, 1) when binary(Stream) ->
+-spec substr(binary(), pos_integer()) -> binary().
+
+substr(Stream, 1) when is_binary(Stream) ->
     Stream;
-substr(Stream, Start) when binary(Stream), integer(Start), Start > 1 ->
+substr(Stream, Start) when is_integer(Start), Start > 1 ->
     Begin=Start-1,
     <<_:Begin/binary, Tail/binary>> = Stream,
     Tail.
@@ -316,7 +343,9 @@ substr(Stream, Start) when binary(Stream), integer(Start), Start > 1 ->
 
 %% @spec substr(Stream, Start, Length) -> SubStream
 %%
-%% @doc Returns a substream of <CODE>Stream</CODE>, starting at the position <CODE>Start</CODE>, and ending at the end of the stream or at length <CODE>Length</CODE>.
+%% @doc Returns a substream of <CODE>Stream</CODE>, starting at the position
+%% <CODE>Start</CODE>, and ending at the end of the stream or at length
+%% <CODE>Length</CODE>.
 %%
 %% <DIV CLASS="REFBODY"><P>Types:</P>
 %%   <DIV CLASS="REFTYPES">
@@ -336,18 +365,21 @@ substr(Stream, Start) when binary(Stream), integer(Start), Start > 1 ->
 %% </PRE>
 %% </P>
 %% </DIV>
-substr(Stream, Start, Length) 
-  when binary(Stream), integer(Start), Start >= 1, integer(Length), Length >= 0 ->
+-spec substr(binary(), pos_integer(), non_neg_integer()) -> binary().
+
+substr(Stream, Start, Length) when is_integer(Start), Start > 0,
+                                   is_integer(Length), Length >= 0 ->
     Begin=Start-1,
     <<_:Begin/binary, B:Length/binary, _/binary>> = Stream,
     B.
 
-	      
-    
+
+
 
 %% @spec tokens(Stream, SeparatorList) -> Tokens
 %%
-%% @doc Returns a list of tokens in <CODE>Stream</CODE>, separated by the characters in <CODE>SeparatorList</CODE>.
+%% @doc Returns a list of tokens in <CODE>Stream</CODE>, separated by the
+%% characters in <CODE>SeparatorList</CODE>.
 %%
 %% <DIV CLASS="REFBODY"><P>Types:</P>
 %%   <DIV CLASS="REFTYPES">
@@ -367,34 +399,40 @@ substr(Stream, Start, Length)
 %% </PRE>
 %% </P>
 %% </DIV>
-tokens(Stream, SeparatorList) -> tokens1(Stream, SeparatorList, []).
+-spec tokens(binary(), binary()) -> [binary(),...].
+
+tokens(Stream, SeparatorList) when is_binary(SeparatorList) ->
+    tokens1(Stream, SeparatorList, []).
 
 tokens1(<<C:8, Rest/binary>>, Seps, Toks) ->
     case member(C, Seps) of
-	true -> tokens1(Rest, Seps, Toks);
-	false -> tokens2(Rest, Seps, Toks, <<C>>)
+        true -> tokens1(Rest, Seps, Toks);
+        false -> tokens2(Rest, Seps, Toks, <<C>>)
     end;
 tokens1(<<>>, _Seps, Toks) ->
     lists:reverse(Toks).
-    
+
 tokens2(<<C:8, Rest/binary>>, Seps, Toks, Cs) ->
     case member(C, Seps) of
-	true -> tokens1(Rest, Seps, [Cs|Toks]);
-	false -> tokens2(Rest, Seps, Toks, <<Cs/binary, C>>)
+        true -> tokens1(Rest, Seps, [Cs|Toks]);
+        false -> tokens2(Rest, Seps, Toks, <<Cs/binary, C>>)
     end;
 tokens2(<<>>, _Seps, Toks, Cs) ->
     lists:reverse([Cs|Toks]).
 
-	 
+
 %% @spec chars(Character, Number) -> Stream
-%% @doc See {@link chars/3} for details.   
+%% @doc See {@link chars/3} for details.
+-spec chars(char(), non_neg_integer()) -> binary().
+
 chars(Character, Number) -> chars(Character, Number, <<>>).
 
 
 %% @spec chars(Character, Number, Tail) -> Stream
 %%
-%% @doc Returns a stream consisting of <CODE>Number</CODE> of characters <CODE>Character</CODE>. 
-%% Optionally, the stream can end with the stream <CODE>Tail</CODE>.
+%% @doc Returns a stream consisting of <CODE>Number</CODE> of characters
+%% <CODE>Character</CODE>.  Optionally, the stream can end with the stream
+%% <CODE>Tail</CODE>.
 %%
 %% <DIV CLASS="REFBODY"><P>Types:</P>
 %%   <DIV CLASS="REFTYPES">
@@ -406,15 +444,18 @@ chars(Character, Number) -> chars(Character, Number, <<>>).
 %%   </DIV>
 %% </DIV>
 %%
-chars(Character, Number, Tail) when Number > 0 ->    
+-spec chars(char(), non_neg_integer(), binary()) -> binary().
+
+chars(Character, Number, Tail) when is_integer(Number), Number > 0 ->
     chars(Character, Number-1, <<Character:8, Tail/binary>>);
-chars(_C, 0, Tail) ->
+chars(_C, 0, Tail) when is_integer(_C), is_binary(Tail) ->
     Tail.
 
 
 %% @spec copies(Stream, Number) -> Copies
 %%
-%% @doc Returns a stream containing <CODE>Stream</CODE> repeated <CODE>Number</CODE> times.
+%% @doc Returns a stream containing <CODE>Stream</CODE> repeated
+%% <CODE>Number</CODE> times.
 %%
 %% <DIV CLASS="REFBODY"><P>Types:</P>
 %%   <DIV CLASS="REFTYPES">
@@ -425,24 +466,28 @@ chars(_C, 0, Tail) ->
 %%   </DIV>
 %% </DIV>
 %%
-copies(Stream, Number) when binary(Stream), Number >= 0 ->
+-spec copies(binary(), non_neg_integer()) -> binary().
+
+copies(Stream, Number) when is_binary(Stream), is_integer(Number),
+                            Number >= 0 ->
     copies(Stream, Number, <<>>).
 
-copies(_S, 0, Res) ->
-    Res;
-copies(S, Num, Res) ->
-    copies(S, Num-1, <<S/binary, Res/binary>>).
+copies(_S, 0, Res)  -> Res;
+copies(S, Num, Res) -> copies(S, Num-1, <<S/binary, Res/binary>>).
 
 
 
 %% @spec words(Stream) -> Count
-%% @doc See {@link words/2} for details.   
+%% @doc See {@link words/2} for details.
+-spec words(binary()) -> pos_integer().
+
 words(Stream) -> words(Stream, $\s).
 
 
 %% @spec words(Stream, Character) -> Count
 %%
-%% @doc Returns the number of words in <CODE>Stream</CODE>, separated by blanks or <CODE>Character</CODE>.
+%% @doc Returns the number of words in <CODE>Stream</CODE>, separated by blanks
+%% or <CODE>Character</CODE>.
 %%
 %% <DIV CLASS="REFBODY"><P>Types:</P>
 %%   <DIV CLASS="REFTYPES">
@@ -462,11 +507,13 @@ words(Stream) -> words(Stream, $\s).
 %% </PRE>
 %% </P>
 %% </DIV>
-words(Stream, Character) when integer(Character) ->
+-spec words(binary(), char()) -> pos_integer().
+
+words(Stream, Character) when is_integer(Character) ->
     w_count(strip(Stream, both, Character), Character, 0).
-    
+
 w_count(<<>>, _, Num) -> Num+1;
-w_count(<<C:8, Rest/binary>>, C, Num) -> 
+w_count(<<C:8, Rest/binary>>, C, Num) ->
     w_count(strip(Rest, left, C), C, Num+1);
 w_count(<<_:8, Rest/binary>>, C, Num) ->
     w_count(Rest, C, Num).
@@ -474,12 +521,14 @@ w_count(<<_:8, Rest/binary>>, C, Num) ->
 
 %% @spec sub_word(Stream, Number) -> Word
 %% @doc See {@link sub_word/3} for details.
+-spec sub_word(binary(), non_neg_integer()) -> binary().
+
 sub_word(Stream, Number) -> sub_word(Stream, Number, $\s).
 
 
 %% @spec sub_word(Stream, Number, Character) -> Word
 %%
-%% @doc Returns the word in position <CODE>Number</CODE> of <CODE>Stream</CODE>. 
+%% @doc Returns the word in position <CODE>Number</CODE> of <CODE>Stream</CODE>.
 %% Words are separated by blanks or <CODE>Characters</CODE>.
 %%
 %% <DIV CLASS="REFBODY"><P>Types:</P>
@@ -501,12 +550,12 @@ sub_word(Stream, Number) -> sub_word(Stream, Number, $\s).
 %% </PRE>
 %% </P>
 %% </DIV>
-sub_word(S, Offset, C) when integer(C), integer(Offset), Offset >= 0 ->
+-spec sub_word(binary(), non_neg_integer(), char()) -> binary().
+
+sub_word(S, Offset, C) when is_integer(Offset), Offset >= 0 ->
     case words(S, C) of
-        Num when Num < Offset ->
-            <<>>;
-        _Num ->
-            s_word(strip(S, left, C), Offset, C, 1, <<>>)
+        Num when Num < Offset -> <<>>;
+        _Num -> s_word(strip(S, left, C), Offset, C, 1, <<>>)
     end.
 
 
@@ -524,22 +573,27 @@ s_word(<<_:8, T/binary>>, Stop, C, Offset, Res) when Offset < Stop ->
 
 %% @spec strip(Stream) -> Stripped
 %% @doc See {@link strip/3} for details.
+-spec strip(binary()) -> binary().
+
 strip(Stream) -> strip(Stream, both).
 
 %% @spec strip(Stream, Direction) -> Stripped
 %% @doc See {@link strip/3} for details.
-strip(Stream, left) -> strip_left(Stream, $\s);
+-spec strip(binary(), direction()) -> binary().
+
+strip(Stream, left)  -> strip_left(Stream, $\s);
 strip(Stream, right) -> strip_right(Stream, $\s);
-strip(Stream, both) ->
-    strip_right(strip_left(Stream, $\s), $\s).
+strip(Stream, both)  -> strip_right(strip_left(Stream, $\s), $\s).
 
 
 
 %% @spec strip(Stream, Direction, Character) -> Stripped
 %%
-%% @doc Returns a stream, where leading and/or trailing blanks or a number of <CODE>Character</CODE> have been removed. 
-%% <CODE>Direction</CODE> can be <CODE>left</CODE>, <CODE>right</CODE>, or <CODE>both</CODE> and indicates from which direction blanks are to be removed. 
-%% The function <CODE>strip/1</CODE> is equivalent to <CODE>strip(String, both)</CODE>.
+%% @doc Returns a stream, where leading and/or trailing blanks or a number of
+%% <CODE>Character</CODE> have been removed.  <CODE>Direction</CODE> can be
+%% <CODE>left</CODE>, <CODE>right</CODE>, or <CODE>both</CODE> and indicates
+%% from which direction blanks are to be removed.  The function
+%% <CODE>strip/1</CODE> is equivalent to <CODE>strip(String, both)</CODE>.
 %%
 %%
 %% <DIV CLASS="REFBODY"><P>Types:</P>
@@ -561,21 +615,22 @@ strip(Stream, both) ->
 %% </PRE>
 %% </P>
 %% </DIV>
-strip(S, right, Char) -> strip_right(S, Char);
-strip(S, left, Char) -> strip_left(S, Char);
-strip(S, both, Char) ->
-    strip_right(strip_left(S, Char), Char).
+-spec strip(binary(), direction(), char()) -> binary().
+
+strip(S, right, Char) when is_integer(Char) -> strip_right(S, Char);
+strip(S, left,  Char) when is_integer(Char) -> strip_left(S, Char);
+strip(S, both,  Char) when is_integer(Char) -> strip_right(strip_left(S, Char), Char).
 
 
 strip_left(<<C:8, Rest/binary>>, C) -> strip_left(Rest, C);
 strip_left(<<>>, _C) -> <<>>;
-strip_left(S, _C) -> S.
+strip_left(S, _C) when is_binary(S) -> S.
 
 strip_right(<<C:8, Rest/binary>>, C) ->
     case strip_right(Rest, C) of
-	<<>> -> <<>>;
-	S -> <<C:8, S/binary>>
-		 end;
+        <<>> -> <<>>;
+        S -> <<C:8, S/binary>>
+                 end;
 strip_right(<<>>, _C) -> <<>>;
 strip_right(<<H:8, T/binary>>, C) ->
     S = strip_right(T, C),
@@ -584,13 +639,16 @@ strip_right(<<H:8, T/binary>>, C) ->
 
 %% @spec left(Stream, Number) -> Left
 %% @doc See {@link left/3} for details.
+-spec left(binary(), non_neg_integer()) -> binary().
+
 left(Stream, Number) -> left(Stream, Number, $\s).
 
 %% @spec left(Stream, Number, Character) -> Left
 %%
-%% @doc Returns the <CODE>Stream</CODE> with the length adjusted in accordance with <CODE>Number</CODE>. 
-%% The left margin is fixed. If the length(<CODE>Stream</CODE>) &lt; <CODE>Number</CODE>, 
-%% <CODE>Stream</CODE> is padded with blanks or <CODE>Characters</CODE>.
+%% @doc Returns the <CODE>Stream</CODE> with the length adjusted in accordance
+%% with <CODE>Number</CODE>.  The left margin is fixed. If the
+%% length(<CODE>Stream</CODE>) &lt; <CODE>Number</CODE>, <CODE>Stream</CODE> is
+%% padded with blanks or <CODE>Characters</CODE>.
 %%
 %%
 %% <DIV CLASS="REFBODY"><P>Types:</P>
@@ -612,7 +670,10 @@ left(Stream, Number) -> left(Stream, Number, $\s).
 %% </PRE>
 %% </P>
 %% </DIV>
-left(Stream, Number, Character) when integer(Character) ->
+-spec left(binary(), non_neg_integer(), char()) -> binary().
+
+left(Stream, Number, Character) when is_integer(Number), Number >= 0,
+                                     is_integer(Character) ->
     Slen = len(Stream),
     if
         Slen > Number -> substr(Stream, 1, Number);
@@ -620,20 +681,23 @@ left(Stream, Number, Character) when integer(Character) ->
         Slen == Number -> Stream
     end.
 
-l_pad(S, Num, C) -> 
+l_pad(S, Num, C) ->
     T =  chars(C, Num),
     <<S/binary, T/binary>>.
 
 
 %% @spec right(Stream, Number) -> Right
 %% @doc See {@link right/3} for details.
+-spec right(binary(), non_neg_integer()) -> binary().
+
 right(Stream, Number) -> right(Stream, Number, $\s).
 
 %% @spec right(Stream, Number, Character) -> Right
 %%
-%% @doc Returns the <CODE>Stream</CODE> with the length adjusted in accordance with <CODE>Number</CODE>. 
-%% The right margin is fixed. If the length(<CODE>Stream</CODE>) &lt; <CODE>Number</CODE>, 
-%% <CODE>Stream</CODE> is padded with blanks or <CODE>Characters</CODE>.
+%% @doc Returns the <CODE>Stream</CODE> with the length adjusted in accordance
+%% with <CODE>Number</CODE>.  The right margin is fixed. If the
+%% length(<CODE>Stream</CODE>) &lt; <CODE>Number</CODE>, <CODE>Stream</CODE> is
+%% padded with blanks or <CODE>Characters</CODE>.
 %%
 %%
 %% <DIV CLASS="REFBODY"><P>Types:</P>
@@ -655,7 +719,10 @@ right(Stream, Number) -> right(Stream, Number, $\s).
 %% </PRE>
 %% </P>
 %% </DIV>
-right(Stream, Number, Character) when integer(Character) ->
+-spec right(binary(), non_neg_integer(), char()) -> binary().
+
+right(Stream, Number, Character) when is_integer(Number), Number >= 0,
+                                      is_integer(Character) ->
     Slen = len(Stream),
     if
         Slen > Number -> substr(Stream, Slen-Number+1);
@@ -668,13 +735,16 @@ r_pad(S, Num, C) -> chars(C, Num, S).
 
 %% @spec centre(Stream, Number) -> Center
 %% @doc See {@link center/3} for details.
+-spec centre(binary(), non_neg_integer()) -> binary().
+
 centre(Stream, Number) -> centre(Stream, Number, $\s).
 
 
 %% @spec centre(Stream, Number, Character) -> Center
 %%
-%% @doc Returns a stream, where <CODE>Stream</CODE> is centred in the stream and surrounded by blanks or <CODE>Characters</CODE>. 
-%% The resulting stream will have the length <CODE>Number</CODE>.
+%% @doc Returns a stream, where <CODE>Stream</CODE> is centred in the stream and
+%% surrounded by blanks or <CODE>Characters</CODE>.  The resulting stream will
+%% have the length <CODE>Number</CODE>.
 %%
 %%
 %% <DIV CLASS="REFBODY"><P>Types:</P>
@@ -687,7 +757,10 @@ centre(Stream, Number) -> centre(Stream, Number, $\s).
 %%   </DIV>
 %% </DIV>
 %%
-centre(Stream, Number, Character) when Number > 0 ->
+-spec centre(binary(), non_neg_integer(), char()) -> binary().
+
+centre(Stream, Number, Character) when is_integer(Number), Number >= 0,
+                                       is_integer(Character) ->
     Slen = len(Stream),
     if
         Slen > Number -> substr(Stream, (Slen-Number) div 2 + 1, Number);
@@ -696,17 +769,22 @@ centre(Stream, Number, Character) when Number > 0 ->
             r_pad(l_pad(Stream, Number-(Slen+N), Character), N, Character);
         Slen == Number -> Stream
     end;
-centre(_S, 0, _) -> <<>>.                    %Strange cases to centre string
+centre(_S, 0, _C) when is_binary(_S), is_integer(_C) -> %%Strange cases to centre string
+    <<>>.
 
 
 %% @spec sub_stream(Stream, Start) -> SubStream
 %% @doc See {@link sub_stream/3} for details.
+-spec sub_stream(binary(), pos_integer()) -> binary().
+
 sub_stream(Stream, Start) -> substr(Stream, Start).
 
 
 %% @spec sub_stream(Stream, Start, Stop) -> SubStream
 %%
-%% @doc Returns a substream of <CODE>Stream</CODE>, starting at the position <CODE>Start</CODE> to the end of the stream, or to and including the <CODE>Stop</CODE> position.
+%% @doc Returns a substream of <CODE>Stream</CODE>, starting at the position
+%% <CODE>Start</CODE> to the end of the stream, or to and including the
+%% <CODE>Stop</CODE> position.
 %%
 %%
 %% <DIV CLASS="REFBODY"><P>Types:</P>
@@ -727,12 +805,15 @@ sub_stream(Stream, Start) -> substr(Stream, Start).
 %% </PRE>
 %% </P>
 %% </DIV>
+-spec sub_stream(binary(), pos_integer(), pos_integer()) -> binary().
+
 sub_stream(Stream, Start, Stop) -> substr(Stream, Start, Stop - Start + 1).
 
 
 %% @spec member(Character, Stream) -> bool()
 %%
-%% @doc Returns <CODE>true</CODE> if <CODE>Character</CODE> is contained in the binary <CODE>Stream</CODE>, otherwise <CODE>false</CODE>.
+%% @doc Returns <CODE>true</CODE> if <CODE>Character</CODE> is contained in the
+%% binary <CODE>Stream</CODE>, otherwise <CODE>false</CODE>.
 %%
 %%
 %% <DIV CLASS="REFBODY"><P>Types:</P>
@@ -744,14 +825,17 @@ sub_stream(Stream, Start, Stop) -> substr(Stream, Start, Stop - Start + 1).
 %%   </DIV>
 %% </DIV>
 %%
-member(Character, <<Character:8, _/binary>> = _Stream) -> true;
+-spec member(char(), binary()) -> bool().
+
+member(Character, <<Character:8, _/binary>>) -> true;
 member(Character, <<_:8, Rest/binary>>) -> member(Character, Rest);
-member(_C, <<>>) -> false.
+member(_C, <<>>) when is_integer(_C) -> false.
 
 
 %% @spec reverse(Stream) -> Reversed
 %%
-%% @doc Returns a binary with the top level bytes in <CODE>Stream</CODE> in reverse order.
+%% @doc Returns a binary with the top level bytes in <CODE>Stream</CODE> in
+%% reverse order.
 %%
 %%
 %% <DIV CLASS="REFBODY"><P>Types:</P>
@@ -762,8 +846,62 @@ member(_C, <<>>) -> false.
 %%   </DIV>
 %% </DIV>
 %%
-reverse(Stream) when binary(Stream) -> reverse(Stream, <<>>).
+-spec reverse(binary()) -> binary().
+
+reverse(Stream) -> reverse(Stream, <<>>).
 
 reverse(<<>>, Rest) -> Rest;
-reverse(<<H:8, T/binary>>, Rest) ->
-    reverse(T, <<H:8, Rest/binary>>).
+reverse(<<H:8, T/binary>>, Rest) -> reverse(T, <<H:8, Rest/binary>>).
+
+
+%% @spec to_lower(Stream) -> Result
+%%
+%% @doc The given stream is converted to lower case. Note that the supported
+%% character set is ISO/IEC 8859-1 (a.k.a. Latin 1), all values outside this set
+%% is unchanged
+%%
+%%
+%% <DIV CLASS="REFBODY"><P>Types:</P>
+%%   <DIV CLASS="REFTYPES">
+%%     <P>
+%%       <STRONG><CODE>Stream = Result = binary()</CODE></STRONG><BR/>
+%%     </P>
+%%   </DIV>
+%% </DIV>
+%%
+-spec to_lower(binary()) -> binary().
+
+to_lower(Stream) when is_list(Stream) ->
+    << <<(to_lower_char(C))>> || <<C>> <= Stream>>.
+
+to_lower_char(C) when is_integer(C), $A =< C, C =< $Z -> C + 32;
+to_lower_char(C) when is_integer(C), 16#C0 =< C, C =< 16#D6 -> C + 32;
+to_lower_char(C) when is_integer(C), 16#D8 =< C, C =< 16#DE -> C + 32;
+to_lower_char(C) -> C.
+
+
+%% @spec to_upper(Stream) -> Result
+%%
+%% @doc The given stream is converted to upper case. Note that the supported
+%% character set is ISO/IEC 8859-1 (a.k.a. Latin 1), all values outside this set
+%% is unchanged
+%%
+%%
+%% <DIV CLASS="REFBODY"><P>Types:</P>
+%%   <DIV CLASS="REFTYPES">
+%%     <P>
+%%       <STRONG><CODE>Stream = Result = binary()</CODE></STRONG><BR/>
+%%     </P>
+%%   </DIV>
+%% </DIV>
+%%
+-spec to_upper(binary()) -> binary().
+
+to_upper(Stream) when is_binary(Stream) ->
+    << <<(to_upper_char(C))>> || <<C>> <= Stream>>.
+
+
+to_upper_char(C) when is_integer(C), $a =< C, C =< $z -> C - 32;
+to_upper_char(C) when is_integer(C), 16#E0 =< C, C =< 16#F6 -> C - 32;
+to_upper_char(C) when is_integer(C), 16#F8 =< C, C =< 16#FE -> C - 32;
+to_upper_char(C) -> C.
